# EdgeDetectionViewer

./: .gitattributes  .gitignore  README.md  package-lock.json  settings.gradle.kts
app/: build.gradle.kts
app/src/androidTest/java/com/guru/edgedetectionviewer/: ExampleInstrumentedTest.kt
app/src/androidTest/java/com/guru/edgedetectionviewer2/: ExampleInstrumentedTest.kt
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: CMakeLists.txt  edgedetectionviewer.cpp  edgedetectionviewer2.cpp  opencv_processing.cpp  opencv_processing.h
app/src/main/java/com/guru/edgedetectionviewer/: MainActivity.kt
app/src/main/java/com/guru/edgedetectionviewer/camera/: CameraController.kt  FrameProcessor.kt
app/src/main/java/com/guru/edgedetectionviewer/gl/: GLView.kt  MyRenderer.kt  ShaderUtils.kt
app/src/main/java/com/guru/edgedetectionviewer2/: EdgeRenderer.kt  MainActivity.kt
app/src/main/res/layout/: activity_main.xml
app/src/main/res/values/: strings.xml  themes.xml
app/src/main/res/values-night/: themes.xml
app/src/main/res/xml/: network_security_config.xml
app/src/test/java/com/guru/edgedetectionviewer/: ExampleUnitTest.kt
app/src/test/java/com/guru/edgedetectionviewer2/: ExampleUnitTest.kt
gradle/wrapper/: gradle-wrapper.properties
web/: insert.html  main.ts  tsconfig.json
webviewer/: index.html  package-lock.json  package.json  server.js  tsconfig.json  viewer.ts
